--- a/src/scss/respirators.scss
+++ b/src/scss/respirators.scss
@@ -9,7 +9,7 @@
 
         &-mini {
             display: flex;
-
+            
         }
     }
 
@@ -49,12 +49,13 @@
 .block {
 
     &__left {
-        width: 50%;
+        // width: 50%;
         height: 100%;
 
         &-bg {
             background: url(../img/factory.png) no-repeat;
-            height: 600px;
+            height: 580px;
+            width: 50%;
             display: flex;
         }
     }
@@ -83,10 +84,14 @@
         &-text {
             font-family: 'Open Sans';
             font-style: normal;
-            font-weight: 700;
+            font-weight: 500;
             font-size: 16px;
             line-height: 30px;
             color: $main_text
+            & span{
+                font-weight: 700;
+                font-size: 1000px;
+            }
         }
 
         &-top {
