--- a/src/scss/bg.scss
+++ b/src/scss/bg.scss
@@ -1,11 +1,13 @@
 .bg {
     position: absolute;
     left: 51%;
+    top: 0px;
     z-index: -1;
     opacity: 20%;
+
     & img {
         border-radius: 0 0 0 150px;
-        width:100%;
+        width: 100%;
     }
 }
 
@@ -15,6 +17,10 @@
     left: -200px;
     z-index: -1;
 
+    & img {
+        border-radius: 0 0 0 150px;
+        width: 100%;
+    }
 }
 
 .bg2 {
@@ -22,6 +28,10 @@
     top: 1900px;
     right: -200px;
     z-index: -2;
+
+    & img {
+        width: 100%;
+    }
 }
 
 .bg3 {
@@ -33,4 +43,5 @@
     width: 100%;
     height: 1560px;
     z-index: -1;
+
 }
