--- a/src/scss/breakpoints.scss
+++ b/src/scss/breakpoints.scss
@@ -1,39 +1,172 @@
-@media (max-width:1400px) {
+@media (max-width:1150px) {
+    .header__body {
+        width: 100%;
+    }
 
-}
-@media screen and (max-width:1100px){
- .block__left-bg{
-    height: 591px;
- }
+    .bg {
+        display: none;
+    }
+
+    .bg2 {
+        display: none;
+    }
+
+    .container {}
+
+    .protect__main {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .blocks {
+
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .respirators__blocks {
+        padding-top: 80px;
+    }
+
+    .respirators__block {
+        flex-wrap: wrap;
+        padding-bottom: 50px;
+        justify-content: center;
+    }
+
+    .el1 {
+        padding-left: 45px;
+    }
+
+    .block__left {
+        order: 2;
+    }
+
+    .respirators__block-mini {
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 0 100px;
+    }
+
+    .block__left-bg {
+        width: 550px;
+    }
+
+    .block__right-mini {
+        width: 550px;
+    }
+
+    .comments {
+        padding-top: 100px;
+        padding-bottom: 0;
+    }
+
+    .shopping__tittle {
+        padding: 0;
+    }
+
+    .yellow {
+        padding: 0 30px;
+    }
+
+    .footer__bottom {
+        padding: 30px;
+    }
+
+    .footer__row {
+        padding-right: 50px;
+    }
 }
 
 @media screen and (max-width:1002px) {
     .blocks {
-    flex-wrap:wrap;
+        flex-wrap: wrap;
     }
-    .protect__text{
-        max-width:1000px;
+
+    .protect__text {
+        max-width: 1000px;
         padding-bottom: 20px;
     }
-    .photo{
+
+    .photo {
         max-width: 1000px;
     }
-    .bg img{
+
+    .bg,
+    .bg1,
+    .bg2,
+    .bg3 {
         display: none;
     }
 }
 
-@media screen and (max-width:1026px){
-    .block__right-mini{
-        height: 569px;
+@media screen and (max-width:780px) {
+    .menu__btn {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .menu__list-item {
+        padding-right: 15px;
+    }
+
+    .logos {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .logos_logo {
+        padding-top: 20px;
+    }
+
+    .comments {
+        flex-wrap: wrap;
+        justify-content: center;
+
+        &__body {
+            width: 80%;
+            padding: 0;
+            margin: 10px;
+        }
+    }
+
+    .shopping__tittle {
+        text-align: center;
+    }
+
+    .yellow__footer {
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+
+    .yellow__row {
+        padding: 10px;
+
+    }
+
+    .int {
+        display: none;
     }
 }
 
-@media screen and (max-width:290px){
-    .respirators__block-mini{
-        flex-wrap: wrap;
+@media (max-width:600) {
+    .header__input {
+        width: 50px;
+        height: 20px;
     }
-    .block__right-mini{
-        height: none;
+
+    .btn {
+        font-size: 12px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .photo img {
+        width: 300px;
+    }
+
+    .miniblocks {
+        flex-wrap: wrap;
     }
 }
