--- a/src/scss/reasons.scss
+++ b/src/scss/reasons.scss
@@ -12,24 +12,13 @@
 .block {
     width: 50%;
 
-    &__left {}
-
     &__right {
         width: 70%;
-
-        &__tittle {}
-
-        &-text {}
     }
-
-    &__img {}
 }
 
 .block {
     padding: 0;
-    &__img {}
-
-    &__row {}
 
     &__tittle {
         font-family: 'Open Sans';
@@ -40,7 +29,6 @@
         color: $title_text
     }
 
-    &__text {}
 }
 
 .miniblocks {
@@ -50,21 +38,23 @@
 }
 
 .icons {
-    &-blue {    color: #fff;
+    &-blue {
+        color: #fff;
         border-radius: 50%;
         background-color: $main_text3;
         width: 45px;
         height: 45px;
         margin: 8px;
-        & img{
-            filter: invert(100%); width:30px;
+
+        & img {
+            filter: invert(100%);
+            width: 30px;
             padding-left: 3px;
             padding-top: 1px;
         }
     }
-        
 }
 
 .bi {
-align-items:center;
+    align-items: center;
 }
