--- a/src/scss/respirators.scss
+++ b/src/scss/respirators.scss
@@ -9,14 +9,13 @@
 
         &-mini {
             display: flex;
-            
+
         }
     }
 
     &__contact {
         display: flex;
         padding-top: 35px;
-        // justify-content: center;
         align-content: center;
     }
 
@@ -49,7 +48,6 @@
 .block {
 
     &__left {
-        // width: 50%;
         height: 100%;
 
         &-bg {
@@ -87,17 +85,16 @@
             font-weight: 500;
             font-size: 16px;
             line-height: 30px;
-            color: $main_text
-            & span{
+            color: $main_text;
+
+            & span {
                 font-weight: 700;
-                font-size: 1000px;
             }
         }
 
         &-top {
             display: flex;
             flex-grow: 1;
-
         }
 
         &-down {
@@ -107,12 +104,9 @@
             padding: 40px;
             flex-grow: 1;
             border-radius: 0 0 20px 0;
-
         }
     }
 }
-
-
 
 .blue {
     &-block {
@@ -126,7 +120,6 @@
         align-self: flex-end;
         width: 50%;
         padding: 50px 30px;
-
     }
 }
 
@@ -141,7 +134,6 @@
         padding: 80px 30px;
     }
 
-
     &-right {
         font-family: 'Open Sans';
         font-style: normal;
@@ -152,7 +144,6 @@
         padding: 80px 30px;
         background-color: $main_text3;
         border-radius: 0 20px 0 0;
-
     }
 }
 
@@ -167,6 +158,8 @@
 }
 
 .sblock {
+    color: $title_text;
+
     &__tittle {
         font-family: 'Rubik';
         font-style: normal;
@@ -175,8 +168,6 @@
         line-height: 50px;
         color: $title_text;
     }
-
-    color:$title_text;
 
     &__text {
         font-family: 'Open Sans';
@@ -202,7 +193,6 @@
     background-color: white;
     margin: 0 40px;
 }
-
 
 .contus {
     &__text {
@@ -251,4 +241,8 @@
 
 .logos_logo {
     padding-right: 100px;
+
+    & :last-child {
+        padding-right: 0;
+    }
 }
